--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "deploy": "npm run build && firebase deploy --only hosting:digital-company",
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
@@ -15,6 +16,7 @@
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
