--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
@@ -27,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
