--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 node_modules
+.env
+.env.local
+.env.*
+
+# Google OAuth client secret JSON (do not commit secrets)
+client_secret_*.json
+
+# Common secrets
+*.key
+*.pem
+*.p12
+*.crt
+*.cert
+
+# Vite build output
+dist
