--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,16 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@googleapis/drive": "^19.1.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "firebase-admin": "^13.5.0",
+    "google-auth-library": "^10.5.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3"
   },
