--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VITE_APP_ENV=development
-VITE_API_URL=
+VITE_API_URL=http://localhost:3000
+VITE_BLOG_SCRAPE_URL=https://wordpress.org/news/feed/
 VITE_GOOGLE_CLIENT_ID=976858385109-rr84jmrq8o025dggrlgac907bdtqms4u.apps.googleusercontent.com
 # Email destinataire par défaut pour la messagerie Standard
 VITE_STANDARD_EMAIL=support@digital.tld
