--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
+    "@react-pdf/renderer": "^4.3.1",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
