--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "npm run build && firebase deploy --only hosting:digital-company",
+    "deploy": "npm run build && npx firebase deploy --only hosting:digital-company --project digital-e6840",
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
