--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ VITE_API_URL=http://localhost:3000
 VITE_BLOG_SCRAPE_URL=https://wordpress.org/news/feed/
 VITE_GOOGLE_CLIENT_ID=976858385109-rr84jmrq8o025dggrlgac907bdtqms4u.apps.googleusercontent.com
 # Email destinataire par défaut pour la messagerie Standard
-VITE_STANDARD_EMAIL=support@digital.tld
+VITE_STANDARD_EMAIL=company.digital.noreply@gmail.com
